2006-02-17  Frank Lichtenheld  <djpig@debian.org>

	* scripts/dpkg-scanpackages.pl: Fix override handling
	which was broken by the latest changes.

2006-02-17  Guillem Jover  <guillem@debian.org>

	* debian/dselect.install: Install only dselect domain.
	* debian/dpkg.install: Install only dpkg domain.
	* dselect/po: New directory.
	* dselect/main.cc (main): Use DSELECT domain.
	* dselect/Makefile.am (SUBDIRS): Add po.
	* configure.ac (AC_CONFIG_FILES): Add dselect/po/Makefile.in.

2006-02-17  Guillem Jover  <guillem@debian.org>

	* methods/: Move directory to dselect/methods/.
	* Makefile.am (SUBDIRS): Move methods to ...
	* dselect/Makefile.am (SUBDIRS): ... here. New variable.
	* configure.ac (AC_CONFIG_FILES): Rename methods/Makefile to
	dselect/methods/Makefile.

2006-02-17  Guillem Jover  <guillem@debian.org>

	* configure.ac: Require gettext 0.14.5.

2006-02-17  Guillem Jover  <guillem@debian.org>

	* configure.ac: Use AC_CONFIG_AUX_DIR to move auxiliary scripts to
	config/.

2006-02-16  Frank Lichtenheld  <djpig@debian.org>

	* configure.ac: Bump version to 1.13.16~

2006-02-15  Frank Lichtenheld  <djpig@debian.org>

	* configure.ac: Release 1.13.15.

2006-02-15  SZERVÁC Attila  <sas@321.hu>

	* man/hu/dpkg.cfg.5.hu.po: Added.
	* man/hu/dpkg.cfg.5.hu.po.addendum: Likewise.
	* man/hu/dselect.cfg.5.hu.po: Likewise.
	* man/hu/dselect.cfg.5.hu.po.addendum: Likewise.

2006-02-13  Jordi Mallach  <jordi@debian.org>

	* src/processarc.c (process_archive): Add missing closing parenthesis
	in a string.

2006-02-12  Frank Lichtenheld  <djpig@debian.org>

	* configure.ac: Bump version to 1.13.15~

	* configure.ac: Release 1.13.14.

2006-02-11  Denis Barbier  <barbier@debian.org>

	* man/C/dpkg.1: Escape ` and ', otherwise they are converted to
	quotation marks, which makes cut and paste useless.
	* man/C/dpkg-query.1: Likewise.
	* man/C/dpkg-name.1: Likewise.
	* man/C/dpkg-architecture.1: Likewise.

2006-02-11  Philippe Batailler  <philippe.batailler@free.fr>
