@@ -441,16 +441,13 @@ Assume the filename of the package will be
 instead of the normal package_version_arch.deb filename.
 .TP
 .BR \-is ", " \-ip ", " \-isp
-Include the
-.BR Section " and " Priority
-fields for this package from the main source control file in the
-binary package control file being generated.  Usually this information
-is not included here, but only in the
-.B .changes
-file.
-.B \-isp
-includes both fields,
-.BR \-is " only the " Section " and " \-ip " only the " Priority .
+These options are ignored for compatibility with older versions of
+dpkg-dev but are now deprecated. Previously they were used to tell
+dpkg-gencontrol to include the Section and Priority fields in the
+control file. This is now the default behaviour. If you want to
+get the old behaviour you can use the
+.B \-U
+option to delete the fields from the control file.
 .TP
 .BI \-P packagebuilddir
 Tells
