@@ -11,6 +11,9 @@ dpkg (1.13.16~) UNRELEASED; urgency=low
   [ Frank Lichtenheld ]
   * Fix override handling in dpkg-scanpackages which was broken in
     1.13.14 and .15. Closes: #353305
+  * Make -isp the default behaviour of dpkg-gencontrol as it is
+    always used anyway these days. Suggested by Matthew Vernon.
+    Closes: #215233
 
  -- Guillem Jover <guillem@debian.org>  Fri, 17 Feb 2006 03:52:59 +0200
 
