@@ -3,6 +3,12 @@
 	* scripts/dpkg-scanpackages.pl: Fix override handling
 	which was broken by the latest changes.
 
+	* scripts/dpkg-gencontrol.pl: Make -isp the default
+ 	behaviour.
+	* man/C/dpkg-source.1: Document the behaviour
+ 	change in dpkg-gencontrol.
+
+
 2006-02-17  Guillem Jover  <guillem@debian.org>
 
 	* debian/dselect.install: Install only dselect domain.
